--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -1,3 +1,5 @@
+@import 'TypeCard.scss';
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -10,26 +12,28 @@
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+  &:hover {
+    filter: drop-shadow(0 0 2em #646cffaa);
   }
-  to {
-    transform: rotate(360deg);
+  &.react:hover {
+    filter: drop-shadow(0 0 2em #61dafbaa);
+  }
+
+  @keyframes logo-spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
   }
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  a:nth-of-type(2) {
+    .logo {
+      animation: logo-spin infinite 20s linear;
+    }
   }
 }
 
@@ -40,3 +44,5 @@
 .read-the-docs {
   color: #888;
 }
+
+
