--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -40,3 +40,13 @@
 .read-the-docs {
   color: #888;
 }
+
+.poke-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.poke-card {
+  flex: 0 0 auto;
+  margin: 10px;
+}
