--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -5,21 +5,108 @@
   text-align: center;
 }
 
+.PokeCardStyle {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(150px, auto);
+    gap: 20px;
 
-.card {
-  padding: 2em;
+    li {
+      border-radius: 8px;
+      box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+    }
+  
+    img {
+        max-width: 100%;
+    }
+    
+    h3, p {
+        padding: 10px;
+        margin: 0;
+    }
 }
 
-.read-the-docs {
-  color: #888;
-}
 
-.poke-container {
-  display: flex;
-  flex-wrap: wrap;
-}
+.TypeStyle {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 10px;
 
-.poke-card {
-  flex: 0 0 auto;
-  margin: 10px;
+  img {
+      margin-right: 10px;
+      max-width: 50px;
+      border-radius: 50%;
+  }
+
+  li {
+      padding: 10px;
+      box-sizing: border-box;
+      border-radius: 8px;
+      display: flex;
+      align-items: center;
+  }
+
+  .normal{
+      background-color: #dce1e6;
+  }
+  .fighting{
+      background-color: #f0c3d0;
+  }
+  .flying{
+      background-color: #dce4f4;
+  }
+  .poison{
+      background-color: #e6caf2;
+  }
+  .ground{
+      background-color: #f2c8b4;
+  }
+  .rock{
+      background-color: #f7eed4;
+  }
+  .bug{
+      background-color: #eaf4d3;
+  }
+  .ghost{
+      background-color: #d0d9f4;
+  }
+  .steel{
+      background-color: #d4edf7;
+  }
+  .fire{
+      background-color: #f4d5bf;
+  }
+  .water{
+      background-color: #cbe1f9;
+  }
+  .grass{
+      background-color: #cdf9c8;
+  }
+  .electric{
+      background-color: #f4eab8;
+  }
+  .psychic{
+      background-color: #f2c2c4;
+  }
+  .ice{
+      background-color: #d6f9f3;
+  }
+  .dragon{
+      background-color: #c6dff4;
+  }
+  .dark{
+      background-color: #d3cae3;
+  }
+  .fairy{
+      background-color: #f9dbf6;
+  }
+  .unknown, .shadow{
+      visibility: hidden;
+  }
 }
