routing for typeCard
la til link. når man trykker på en type blir du sent til riktig path

--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -37,6 +37,11 @@
   grid-template-columns: repeat(6, 1fr);
   gap: 10px;
 
+  .TypeLink {
+    text-Decoration: none;
+    color: inherit;
+  }
+
   img {
       margin-right: 10px;
       max-width: 50px;
