--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -14,6 +14,11 @@
     grid-auto-rows: minmax(150px, auto);
     gap: 20px;
 
+    .PokeCardLink {
+        text-Decoration: none;
+        color: inherit;
+    }
+
     li {
       border-radius: 8px;
       box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
