--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -26,9 +26,6 @@
       padding: 5px;
     }
 }
-  
-
-
 
 .PokeCardStyle {
     list-style-type: none;
@@ -159,6 +156,10 @@
 
 }
 
+.TeamLink{
+    text-Decoration: none;
+    color: inherit;
+}
 
 .normal{
     background-color: #dce1e6;
