--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -10,6 +10,11 @@
     justify-content: space-between;
     list-style-type: none;
   
+    .NavLink {
+        text-Decoration: none;
+        color: inherit;
+    }
+
     // Knapper
     .pokedex-button{
         background-color: transparent;
@@ -115,8 +120,8 @@
     }
   
     img {
-      width: 400px; /* Juster størrelsen etter behov */
-      height: 400px; /* Juster størrelsen etter behov */
+      width: 400px;
+      height: 400px; 
       border-radius: 3%;
     }
   }
