Søkefelt og Sanity
Fullført søkefelt med logo som knapp integrert i søkefeltet (ferdig stylet). Startet på Sanity tabellen Teams.

--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -27,6 +27,24 @@
     }
 }
 
+.wrapper {
+    border: 1px solid #000;
+    display: inline-block;
+
+    input,
+    button {
+        background-color: transparent;
+        border: 0;
+    }
+
+    .SearchLogo{
+        height: 15px;
+        width: 15px;
+    }
+}
+
+
+
 .PokeCardStyle {
     list-style-type: none;
     padding: 0;
