--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -218,3 +218,31 @@
 .unknown, .shadow, .stellar{
     visibility: hidden;
 }
+
+@media screen and (max-width: 800px) {
+    #root {
+      padding: 10px; 
+    }
+
+    .PokeCardStyle {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  
+    .PokeCardStyle li {
+      width: 50%;
+    }
+
+    .NavContainer {
+        display: flex;
+        flex-wrap: wrap;
+      }
+  
+      .NavContainer .pokedex-button {
+        width: 50%; 
+      }
+
+}
+
+
+  
