--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -23,7 +23,8 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin-left: 15rem;
+  margin-right: 15rem;
   display: flex;
   place-items: center;
   min-width: 320px;
