--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -11,6 +11,13 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  
+  max-width: 1280px; 
+  width: 100%;
+  padding: 2rem 3rem 2rem 3rem;
+  box-sizing: border-box; 
+  margin: 0 auto; 
 }
 
 a {
@@ -18,15 +25,15 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
-  margin-left: 15rem;
-  margin-right: 15rem;
-  display: flex;
-  place-items: center;
+  margin: 0;
+  flex-direction: column;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -43,11 +50,12 @@ button {
   font-weight: 500;
   font-family: inherit;
   cursor: pointer;
-
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -58,10 +66,25 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
+  }
+}
+
+
+@media (max-width: 768px) {
+  .container {
+    padding: 2rem 1rem 2rem 1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    padding: 2rem 0.5rem 2rem 0.5rem;
   }
 }
