--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -10,9 +10,11 @@
     justify-content: space-between;
     list-style-type: none;
     
-    // Knapper
+  
     .pokedex-button {
       background-color: transparent;
+      padding:2px;
+      margin:2px;
   
       img {
         width: 20px;
@@ -37,14 +39,14 @@
     gap: 20px;
   
     .PokeCardLink {
-      text-decoration: none;
-      color: inherit;
+        text-decoration: none;
+        color: inherit;
     }
   
     li {
       border-radius: 8px;
       box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
-      transition: transform 0.2s; // Legg til en overgangseffekt for transformasjon
+
     }
     
     img {
@@ -114,8 +116,8 @@
     }
     
     img {
-      width: 400px; /* Juster størrelsen etter behov */
-      height: 400px; /* Juster størrelsen etter behov */
+      width: 400px; 
+      height: 400px; 
       border-radius: 3%;
     }
   }
@@ -225,13 +227,9 @@
       gap: 10px; 
     }
       
-    .PokeCardStyle li {
-      height: auto; // Gjør høyden fleksibel
-    }
+    
   
-    .PokeCardStyle img {
-      height: auto; 
-    }
+   
   
     h3, p {
       padding: 10px;
@@ -241,16 +239,12 @@
   }
 
   
-  
-  
   @media screen and (max-width: 500px) {
     .PokeCardStyle {
       grid-template-columns: repeat(1, 1fr); 
     }
       
-    .PokeCardStyle li {
-      transform: scale(0.8); 
-    }
+  
   }
   
 
